# pride-checksum

./: .coverage  .gitignore  PYPI_SETUP.md  README.md  environment.yml  pride_checksum-1.1.0-py3-none-any.whl  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/pride_checksum/: __main__.py
src/pride_checksum.egg-info/: PKG-INFO
tests/: __init__.py
