[project]
name = "pride-checksum"
version = "0.0.4"
description = "Computes SHA-1 checksum for all the files in the specified directory and writes to checksum.txt file."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click"
]

[project.scripts]
pride_checksum = "pride_checksum.__main__:main"