[project]
name = "pride-checksum"
version = "1.1.0"
description = "Computes SHA-1 checksum for all the specified files  and writes to checksum.txt file."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
pride_checksum = "pride_checksum.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]